# FootballWebScraperV2

./: README.md
FlashscoreWebScraper/: old_web_scraper.py  pyproject.toml  request_component.py  web_scraper.py
FlashscoreWebScraper/output/Anglia/: Albania-Anglia|16.11.2025  Anglia-Costa Rica|10.06.-23:00  Anglia-Croaţia|17.06.-23:00  Anglia-Ghana|23.06.-23:00  Anglia-Japonia|31.03.-21:45  Anglia-Noua Zeelandă|06.06.-23:00  Anglia-Serbia|13.11.2025  Anglia-Uruguay|27.03.-21:45  Letonia-Anglia|14.10.2025  Panama-Anglia|28.06.-00:00
FlashscoreWebScraper/output/Argentina/: Argentina-Algeria|17.06.-04:00  Argentina-Austria|22.06.-20:00  Argentina-Honduras|07.06.-03:00  Argentina-Islanda|10.06.-04:00  Iordania-Argentina|28.06.-05:00
FlashscoreWebScraper/output/Canada/: Canada-Qatar|19.06.-01:00  Elveţia-Canada|24.06.-22:00
FlashscoreWebScraper/output/Ecuador/: Ecuador-Germania|25.06.-23:00
FlashscoreWebScraper/output/Moldova/: Armenia-Moldova|09.06.-18:00  Cipru-Moldova|30.03.-19:00  Israel-Moldova|16.11.2025  Moldova-Bulgaria|05.06.-20:00  Moldova-Italia|13.11.2025  Moldova-Lituania|26.03.-17:00
FlashscoreWebScraper/output/Spania/: Uruguay-Spania|27.06.-03:00
FlashscoreWebScraper/src/football_scraper/: web_scraper.py
FlashscoreWebScraper/src/football_scraper.egg-info/: PKG-INFO  SOURCES.txt
FlashscoreWebScraper/test/: test_scraper_integration.py  test_scraper_unit.py
FlashscoreWebScraperV2/: pyproject.toml
FlashscoreWebScraperV2/test/: Makefile  conftest.py  test_data_processor_integration.py  test_data_processor_unit.py  test_scraper_integration.py
(+75 files in other folders)
