[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-scraper"
version = "0.1.0"
description = "Scraper pentru statistici și meciuri de fotbal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Numele tău", email = "email@example.com" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0"
]

[tool.setuptools.packages.find]
where = ["src"]