[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "football-scraper"
version = "0.1.0"
description = "Football Scraper"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0"
]

[tool.setuptools.packages.find]
where = ["src"]